2007-06-01  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[1.0.8-1 release]

	* NEWS:
	* configure.ac:
	* debian/changelog: Updating.

2007-06-01  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-window.c: When destroying the window, remove (if exists) the
	escape timeout handler. Fixes #NB59276.

2007-06-01  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-banner.c: When realizing the widget, set the window
	transiency. Setting the transiency in the gobject constructor is not
	good, as the widget is not realized at that point. Fixes: #NB56624.

2007-05-30  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-bread-crumb-trail.h (struct _HildonBreadCrumbTrailClass):
	Add padding for future expansions.

2007-05-30  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-bread-crumb-trail.c (hildon_bread_crumb_trail_class_init):
	Add a new signal "move-parent", bind Escape and BackSpace to it. The handler
	will fake an activation on the previous to the last item of the trail, so
	the effect can be overrided by the developer as usual.
	Also change the callback for the back button to do the same thing, so its
	effect can be overrided too. Fixes: NB#58982

2007-05-30  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-caption.c: Implementing the proper focus grabbing in the
	HildonCaption. Fixes NB#52379. 

2007-05-30  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-bread-crumb-trail.c (crumb_activated_cb): be very paranoid about
	the internal state of the trail after the user has had the chance of executing
	his handler for the signal. Specifically, it may happen that the activated button
	is removed and the user still lets the default handler run. This would segfault
	previously.

2007-05-28  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-font-selection-dialog.c: When the font is really big, add the
	scrollbar to the preview dialog. Fixes NB#54147.
